feat(api): add projects
