# packages/api/src/adapters/api/dto/project.dto.ts
@@ -1,0 +1,49 @@
+import { IsArray, IsNotEmpty, IsOptional, IsString } from 'class-validator'
+
+export class CreateProjectDto {
+  @IsString()
+  @IsNotEmpty()
+  workspaceId: string
+
+  @IsString()
+  @IsNotEmpty()
+  name: string
+
+  @IsString()
+  @IsOptional()
+  description: string | undefined | null
+
+  @IsArray()
+  @IsNotEmpty()
+  languageIds: string[]
+}
+
+export class UpdateProjectDto {
+  @IsString()
+  @IsNotEmpty()
+  projectId: string
+
+  @IsString()
+  @IsNotEmpty()
+  name: string
+
+  @IsString()
+  @IsOptional()
+  description: string | undefined | null
+}
+
+export class AddLanguagesToProjectDto {
+  @IsString()
+  @IsNotEmpty()
+  projectId: string
+
+  @IsArray()
+  @IsNotEmpty()
+  languageIds: string[]
+}
+
+export class DeleteProjectDto {
+  @IsString()
+  @IsNotEmpty()
+  projectId: string
+}
